--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -10,7 +10,6 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
     "@react-native-community/netinfo": "6.0.2",
-    "@types/uuid": "^8.3.3",
     "add": "^2.0.6",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
@@ -36,6 +35,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.3",
+    "@types/uuid": "^8.3.3",
     "typescript": "~4.3.5"
   },
   "private": true
